# citrea-e2e

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  dprint.json  rust-toolchain.toml
.github/: CODEOWNERS
.github/workflows/: code_checks.yml
proto/: clementine.proto
resources/clementine/: generate-certs.sh  regtest_paramset.toml
resources/genesis/bitcoin-regtest/: evm.json
resources/genesis/devnet/: evm.json  l2_block_rule_enforcer.json
resources/genesis/mock/: evm.json
resources/genesis/mock-dockerized/: evm.json
src/: batch_prover.rs  bitcoin.rs  bridge_backend.rs  bridge_backend_client.rs  citrea_cli.rs  client.rs  docker.rs  framework.rs  full_node.rs  lib.rs  light_client_prover.rs  log_provider.rs  node.rs  postgres.rs  prover.rs  sequencer.rs  shared_postgres.rs  test_case.rs  traits.rs  tx_sender.rs  utils.rs  verifier.rs
src/citrea_config/: batch_prover.rs  bitcoin.rs  light_client_prover.rs  mod.rs  prover.rs  risc0.rs  rollup.rs  sequencer.rs
src/clementine/: client.rs  framework.rs  mod.rs  node.rs  nodes.rs  verifier.rs
src/config/: bitcoin.rs  bridge_backend.rs  clementine.rs  docker.rs  mod.rs  postgres.rs  rollup.rs  test.rs  test_case.rs  throttle.rs  tx_sender.rs  utils.rs
tests/: bitcoin.rs  bridge_backend.rs  clementine.rs  docker.rs  mod.rs  sequencer.rs  tx_sender.rs
tests/common/: mod.rs
